--- a/index.html
+++ b/index.html
@@ -25,9 +25,12 @@
           <p><img src="assets/images/icon-list.svg" alt="icon">And much more!</p>
         </div>
         <form method="get" id="form">
-          <label for="mail">Email adress</label>
-          <input type="email" name="email" id="mail" placeholder="email@company.com" autocomplete="on">
-          <button id="btn">Subscribe to monthly newsletter</button>
+          <div class="labels">
+            <label for="mail">Email adress</label>
+            <label for="mail" class="valid-mail hide">Valid mail required</label>
+          </div>
+          <input type="email" name="email" id="mail" placeholder="email@company.com" autocomplete="on"  required>
+          <button id="btn" type="button">Subscribe to monthly newsletter</button>
         </form>
       </div>
       <div class="bg-pic">
@@ -47,7 +50,7 @@
             Please open it and click the button inside to confirm your subscription.
           </p>
         </div>
-      <button class="sub-btn">Dismiss message</button>
+      <button class="sub-btn" type="button">Dismiss message</button>
     </section>
   </main>
 
