--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
   <div class="attribution ">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="https://www.linkedin.com/in/andrefelipe23/">André Felipe</a>.
+    Coded by <a href="https://www.linkedin.com/in/andrefelipe23/" target="_blank">André Felipe</a>.
   </div>
   <script src="assets/js/index.js"></script>
 </body>
