--- a/index.html
+++ b/index.html
@@ -54,10 +54,12 @@
     </section>
   </main>
 
-  <div class="attribution ">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="https://www.linkedin.com/in/andrefelipe23/" target="_blank">André Felipe</a>.
-  </div>
+  <footer>
+    <div class="attribution ">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+      Coded by <a href="https://www.linkedin.com/in/andrefelipe23/" target="_blank">André Felipe</a>.
+    </div>
+  </footer>
   <script src="assets/js/index.js"></script>
 </body>
 
